--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,31 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Freedom Hi",
+  "name": "Freedom Hi | 自由篩",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/ornot/icons/Launch_icon-120x120.png",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "/ornot/icons/Launch_icon-180x180.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "/ornot/icons/Launch_icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/ornot/icons/Launch_icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
+  "scope": "/",
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#ffb332",
+  "background_color": "#ffb332"
 }
